--- a/instagram/index.html
+++ b/instagram/index.html
@@ -36,7 +36,7 @@
 		</a>
 
 		<hgroup>
-		  <h1 class="header-author"><a href="/">John Doe</a></h1>
+		  <h1 class="header-author"><a href="/">汉堡 or 代码</a></h1>
 		</hgroup>
 
 		
@@ -131,7 +131,7 @@
       <nav id="mobile-nav">
   	<div class="overlay">
   		<div class="slider-trigger"></div>
-  		<h1 class="header-author js-mobile-header hide">John Doe</h1>
+  		<h1 class="header-author js-mobile-header hide">汉堡 or 代码</h1>
   	</div>
 	<div class="intrude-less">
 		<header id="header" class="inner">
@@ -139,7 +139,7 @@
 				<img lazy-src="https://octodex.github.com/images/privateinvestocat.jpg" class="js-avatar">
 			</div>
 			<hgroup>
-			  <h1 class="header-author">John Doe</h1>
+			  <h1 class="header-author">汉堡 or 代码</h1>
 			</hgroup>
 			
 			<nav class="header-menu">
@@ -254,7 +254,7 @@
   <div class="outer">
     <div id="footer-info">
     	<div class="footer-left">
-    		&copy; 2015 John Doe
+    		&copy; 2015 汉堡 or 代码
     	</div>
       	<div class="footer-right">
       		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten
